--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <header class="d-flex justify-content-between align-items-center p-3 bg-light">
                 <h1 class="mb-0 ms-4">Campo Minato</h1>
                 <div class="d-flex align-items-center">
+                    <div id="score" class="me-3">Punteggio: 0</div>
                     <select id="stage" class="form-select me-2">
                         <option value="easy">Facile</option>
                         <option value="medium">Medio</option>
